fixed a display error on mobile site

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
+  padding: 1em;
 }
 
 ul {
